boot-envoy-egress/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8001
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: egress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/leagueTable"
                route:
                  cluster: local_service
                  retry_policy: 
                    retry_on: "5xx"
                    num_retries: 3
                    per_try_timeout: 10s
            request_headers_to_add: 
            - header: 
                key: X-RapidAPI-Key
                value: e2369a4050mshf8de9e14b531be4p120df4jsn898ac84aff9a
            - header: 
                key: X-RapidAPI-Host
                value: api-football-v1.p.rapidapi.com
          http_filters:
          - name: envoy.router
            typed_config: {}  
  clusters:
  - name: local_service
    connect_timeout: 2s
    circuit_breakers: 
      thresholds: 
      - max_connections: 10
        max_pending_requests: 3
        max_retries: 3
    type: strict_dns
    lb_policy: round_robin
    tls_context: 
      sni: api-football-v1.p.rapidapi.com
    load_assignment:
      cluster_name: local_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: api-football-v1.p.rapidapi.com
                port_value: 443
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081
